--- a/Oct_7_Session_1_Data_Generation.ipynb
+++ b/Oct_7_Session_1_Data_Generation.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "id": "ggk5jhprzuWP"
    },
@@ -48,6 +48,7 @@
     "# import system libraries\n",
     "import logging\n",
     "import sys\n",
+    "\n",
     "# import scientific libraries\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -104,34 +105,32 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting lisainstrument\n",
-      "  Downloading lisainstrument-1.7.3-py3-none-any.whl.metadata (5.2 kB)\n",
-      "Requirement already satisfied: h5py in /usr/local/lib/python3.10/dist-packages (from lisainstrument) (3.12.1)\n",
-      "Requirement already satisfied: numpy in /usr/local/lib/python3.10/dist-packages (from lisainstrument) (1.26.4)\n",
-      "Requirement already satisfied: scipy in /usr/local/lib/python3.10/dist-packages (from lisainstrument) (1.13.1)\n",
-      "Requirement already satisfied: matplotlib in /usr/local/lib/python3.10/dist-packages (from lisainstrument) (3.8.0)\n",
-      "Collecting lisaconstants (from lisainstrument)\n",
-      "  Downloading lisaconstants-1.3.6-py3-none-any.whl.metadata (3.8 kB)\n",
-      "Requirement already satisfied: packaging in /usr/local/lib/python3.10/dist-packages (from lisainstrument) (24.2)\n",
-      "Requirement already satisfied: importlib-metadata in /usr/local/lib/python3.10/dist-packages (from lisainstrument) (8.5.0)\n",
-      "Requirement already satisfied: zipp>=3.20 in /usr/local/lib/python3.10/dist-packages (from importlib-metadata->lisainstrument) (3.20.2)\n",
-      "Requirement already satisfied: contourpy>=1.0.1 in /usr/local/lib/python3.10/dist-packages (from matplotlib->lisainstrument) (1.3.0)\n",
-      "Requirement already satisfied: cycler>=0.10 in /usr/local/lib/python3.10/dist-packages (from matplotlib->lisainstrument) (0.12.1)\n",
-      "Requirement already satisfied: fonttools>=4.22.0 in /usr/local/lib/python3.10/dist-packages (from matplotlib->lisainstrument) (4.54.1)\n",
-      "Requirement already satisfied: kiwisolver>=1.0.1 in /usr/local/lib/python3.10/dist-packages (from matplotlib->lisainstrument) (1.4.7)\n",
-      "Requirement already satisfied: pillow>=6.2.0 in /usr/local/lib/python3.10/dist-packages (from matplotlib->lisainstrument) (11.0.0)\n",
-      "Requirement already satisfied: pyparsing>=2.3.1 in /usr/local/lib/python3.10/dist-packages (from matplotlib->lisainstrument) (3.2.0)\n",
-      "Requirement already satisfied: python-dateutil>=2.7 in /usr/local/lib/python3.10/dist-packages (from matplotlib->lisainstrument) (2.8.2)\n",
-      "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.10/dist-packages (from python-dateutil>=2.7->matplotlib->lisainstrument) (1.16.0)\n",
-      "Downloading lisainstrument-1.7.3-py3-none-any.whl (38 kB)\n",
-      "Downloading lisaconstants-1.3.6-py3-none-any.whl (17 kB)\n",
-      "Installing collected packages: lisaconstants, lisainstrument\n",
-      "Successfully installed lisaconstants-1.3.6 lisainstrument-1.7.3\n"
+      "Requirement already satisfied: lisainstrument in /home/azevedo/.cache/pypoetry/virtualenvs/lisa-data-workshop-W1VxDv0z-py3.10/lib/python3.10/site-packages (1.7.3)\n",
+      "Requirement already satisfied: h5py in /home/azevedo/.cache/pypoetry/virtualenvs/lisa-data-workshop-W1VxDv0z-py3.10/lib/python3.10/site-packages (from lisainstrument) (3.12.1)\n",
+      "Requirement already satisfied: numpy in /home/azevedo/.cache/pypoetry/virtualenvs/lisa-data-workshop-W1VxDv0z-py3.10/lib/python3.10/site-packages (from lisainstrument) (2.1.3)\n",
+      "Requirement already satisfied: scipy in /home/azevedo/.cache/pypoetry/virtualenvs/lisa-data-workshop-W1VxDv0z-py3.10/lib/python3.10/site-packages (from lisainstrument) (1.14.1)\n",
+      "Requirement already satisfied: matplotlib in /home/azevedo/.cache/pypoetry/virtualenvs/lisa-data-workshop-W1VxDv0z-py3.10/lib/python3.10/site-packages (from lisainstrument) (3.9.2)\n",
+      "Requirement already satisfied: lisaconstants in /home/azevedo/.cache/pypoetry/virtualenvs/lisa-data-workshop-W1VxDv0z-py3.10/lib/python3.10/site-packages (from lisainstrument) (1.3.6)\n",
+      "Requirement already satisfied: packaging in /home/azevedo/.cache/pypoetry/virtualenvs/lisa-data-workshop-W1VxDv0z-py3.10/lib/python3.10/site-packages (from lisainstrument) (24.2)\n",
+      "Requirement already satisfied: importlib-metadata in /home/azevedo/.cache/pypoetry/virtualenvs/lisa-data-workshop-W1VxDv0z-py3.10/lib/python3.10/site-packages (from lisainstrument) (8.5.0)\n",
+      "Requirement already satisfied: zipp>=3.20 in /home/azevedo/.cache/pypoetry/virtualenvs/lisa-data-workshop-W1VxDv0z-py3.10/lib/python3.10/site-packages (from importlib-metadata->lisainstrument) (3.21.0)\n",
+      "Requirement already satisfied: contourpy>=1.0.1 in /home/azevedo/.cache/pypoetry/virtualenvs/lisa-data-workshop-W1VxDv0z-py3.10/lib/python3.10/site-packages (from matplotlib->lisainstrument) (1.3.1)\n",
+      "Requirement already satisfied: cycler>=0.10 in /home/azevedo/.cache/pypoetry/virtualenvs/lisa-data-workshop-W1VxDv0z-py3.10/lib/python3.10/site-packages (from matplotlib->lisainstrument) (0.12.1)\n",
+      "Requirement already satisfied: fonttools>=4.22.0 in /home/azevedo/.cache/pypoetry/virtualenvs/lisa-data-workshop-W1VxDv0z-py3.10/lib/python3.10/site-packages (from matplotlib->lisainstrument) (4.54.1)\n",
+      "Requirement already satisfied: kiwisolver>=1.3.1 in /home/azevedo/.cache/pypoetry/virtualenvs/lisa-data-workshop-W1VxDv0z-py3.10/lib/python3.10/site-packages (from matplotlib->lisainstrument) (1.4.7)\n",
+      "Requirement already satisfied: pillow>=8 in /home/azevedo/.cache/pypoetry/virtualenvs/lisa-data-workshop-W1VxDv0z-py3.10/lib/python3.10/site-packages (from matplotlib->lisainstrument) (11.0.0)\n",
+      "Requirement already satisfied: pyparsing>=2.3.1 in /home/azevedo/.cache/pypoetry/virtualenvs/lisa-data-workshop-W1VxDv0z-py3.10/lib/python3.10/site-packages (from matplotlib->lisainstrument) (3.2.0)\n",
+      "Requirement already satisfied: python-dateutil>=2.7 in /home/azevedo/.cache/pypoetry/virtualenvs/lisa-data-workshop-W1VxDv0z-py3.10/lib/python3.10/site-packages (from matplotlib->lisainstrument) (2.9.0.post0)\n",
+      "Requirement already satisfied: six>=1.5 in /home/azevedo/.cache/pypoetry/virtualenvs/lisa-data-workshop-W1VxDv0z-py3.10/lib/python3.10/site-packages (from python-dateutil>=2.7->matplotlib->lisainstrument) (1.16.0)\n",
+      "\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m24.1\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m24.3.1\u001b[0m\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip install --upgrade pip\u001b[0m\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
    ],
    "source": [
-    "!pip install lisainstrument"
+    "%pip install lisainstrument"
    ]
   },
   {
@@ -296,7 +295,7 @@
    },
    "outputs": [],
    "source": [
-    "!pip install pytdi"
+    "%pip install pytdi"
    ]
   },
   {
@@ -602,7 +601,7 @@
    },
    "outputs": [],
    "source": [
-    "!pip install lisaorbits"
+    "%pip install lisaorbits"
    ]
   },
   {
@@ -810,7 +809,7 @@
     "!apt-get install libgsl-dev\n",
     "!apt-get install libfftw3-dev\n",
     "# LDC package\n",
-    "!pip install lisa-data-challenge"
+    "%pip install lisa-data-challenge"
    ]
   },
   {
@@ -1102,7 +1101,7 @@
    },
    "outputs": [],
    "source": [
-    "!pip install lisagwresponse"
+    "%pip install lisagwresponse"
    ]
   },
   {
@@ -1451,11 +1450,21 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "lisa-data-workshop-W1VxDv0z-py3.10",
+   "language": "python",
    "name": "python3"
   },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.15"
   }
  },
  "nbformat": 4,
